--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,7 @@
 <header class="site-header" role="banner">
+    {% if jekyll.environment == 'production' and site.google_analytics %}
+    {% include google-analytics.html %}
+    {% endif %}
 
     <div class="wrapper">
         {%- assign default_paths = site.pages | map: "path" -%}
